# mobile-use-agent

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
benchmarks/: openapp_smoke.py
benchmarks/results/: openapp_smoke.json
docs/: EFFECT.md  memory_sample.json
docs/screens/: README.md
examples/: wechat_family_scraper.py  wx_group_scraper.py
mobile_use/: __init__.py  adb.py  agent.py  chat_list.py  curriculum.py  group_capture.py  memory.py  ocr.py  pin.py  vlm.py
