[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-use-agent"
version = "0.1.0"
description = "Self-evolving GUI agent for Android apps — ADB + OCR only, no accessibility."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cony.zhang" }]
keywords = ["adb", "android", "gui-agent", "ocr", "automation", "wechat", "self-evolving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rapidocr_onnxruntime>=1.3",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/nuass/mobile-use-agent"

[tool.setuptools.packages.find]
include = ["mobile_use*"]
exclude = ["tests*", "docs*", "examples*"]
